Fix header contacts on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -482,13 +482,6 @@ ul {
             flex-direction: column;
   }
 }
-@media screen and (min-width: 768px) {
-  .header-contacts {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
 
 @media screen and (max-width: 767px) {
   .header-contacts__item:not(:first-child) {
